@@ -47,7 +47,7 @@ apply plugin: 'se.patrikerdes.use-latest-versions'
 def versions = [
         pact_version: '4.1.7'
 ]
-ext['spring-security.version'] = '5.4.5'
+ext['spring-security.version'] = '5.4.7'
 ext['spring-framework.version'] = '5.3.7'
 
 
@@ -135,6 +135,10 @@ tasks.withType(Checkstyle) {
     exclude 'uk/gov/hmcts/ccd/domain/types/sanitiser/document/**'
 }
 
+tasks.withType(Test) {
+    maxParallelForks = System.getenv('MAX_NUM_PARALLEL_THREADS') ?: 6 as int
+}
+
 dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.7.RELEASE'
@@ -197,6 +201,9 @@ dependencies {
     compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     compile group: 'org.awaitility', name: 'awaitility', version: '3.1.6'
 
+    // CVE-2021-28170
+    compile "org.glassfish:jakarta.el:4.0.1"
+
     // CVE-2021-29425
     compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
@@ -223,6 +230,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
     testCompile ('com.opentable.components:otj-pg-embedded:0.12.0')
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
+    testImplementation("org.testcontainers:postgresql:1.15.2")
     testCompile ('com.github.tomakehurst:wiremock-jre8:2.25.1')
     testCompile ('org.springframework.cloud:spring-cloud-contract-wiremock:2.2.4.RELEASE')
     // To avoid compiler warnings about @API annotations in JUnit5 code.
@@ -239,6 +248,7 @@ dependencies {
     testCompile group: 'com.xebialabs.restito', name: 'restito', version: '0.9.3'
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile 'pl.allegro.tech:embedded-elasticsearch:2.7.0'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     // for sonar analysis
     testCompile group: 'org.openid4java', name: 'openid4java', version: '1.0.0'
@@ -253,8 +263,9 @@ dependencies {
         exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
     }
     compile 'org.jooq:jool-java-8:0.9.14'
+    compile 'com.github.hmcts:ccd-case-document-am-client:1.7.1'
 
-    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.2.0'
+    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.3.4-prerelease'
     testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
 
     contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
@@ -266,6 +277,7 @@ dependencies {
     contractTestCompile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
     contractTestCompile group: 'org.springframework.security', name: 'spring-security-oauth2-core'
     contractTestCompile group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
+
 }
 // end::dependencies[]
 
@@ -732,6 +744,12 @@ sourceSets {
     }
 }
 
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 idea {
   module {
     // config to allow Intelij to mark test source and resource files correctly to help linting tools
@@ -848,22 +866,6 @@ runProviderPactVerification.finalizedBy pactVerify
 def timestamp() {
     def date = new Date()
     return date.format('yyyy-MM-dd HH:mm:ss')
-}
-
-configurations { codacy }
-dependencies {
-    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
-}
-task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
-    main = "com.codacy.CodacyCoverageReporter"
-    classpath = configurations.codacy
-    args = [
-            "report",
-            "-l",
-            "Java",
-            "-r",
-            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
-    ]
 }
 
 cucumberReports {
